# git_actions

./: LICENSE.txt  README.md  pyproject.toml
.github/: testing.yaml
.github/workflows/: testing.yaml
src/testingci/: __about__.py  my_math.py
tests/: __init__.py  my_math_test.py
