[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testingci"
dynamic = ["version"]
description = 'CI/CD with github action and pytest'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "space@hack", email = "space@hacke" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/spacehack41/testingci#readme"
Issues = "https://github.com/spacehack41/testingci/issues"
Source = "https://github.com/spacehack41/testingci"

[tool.hatch.version]
path = "src/testingci/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/testingci tests}"

[tool.coverage.run]
source_pkgs = ["testingci", "tests"]
branch = true
parallel = true
omit = [
  "src/testingci/__about__.py",
]

[tool.coverage.paths]
testingci = ["src/testingci", "*/testingci/src/testingci"]
tests = ["tests", "*/testingci/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
